# docs/swagger.json
@@ -27,9 +27,7 @@
   "paths": {
     "/water": {
       "get": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Get Water Info",
         "operationId": "getAllWater",
         "description": "Get water info",
@@ -69,10 +67,7 @@
             "name": "sortOrder",
             "schema": {
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ],
+              "enum": ["asc", "desc"],
               "example": "asc"
             }
           }
@@ -84,11 +79,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -153,11 +144,9 @@
         }
       },
       "post": {
-        "tags": [
-          "Water"
-        ],
+        "tags": ["Water"],
         "summary": "Create used water",
-        "operationId": "addWater",
+        "operationId": "addSpent",
         "description": "Add a used water with payload",
         "security": [
           {
@@ -169,12 +158,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "ml",
-                  "time",
-                  "day",
-                  "month"
-                ],
+                "required": ["ml", "time", "day", "month"],
                 "properties": {
                   "ml": {
                     "description": "Ml drunk",
@@ -208,11 +192,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -239,11 +219,9 @@
     },
     "/water/{id}": {
       "get": {
-        "tags": [
-          "Water"
-        ],
+        "tags": ["Water"],
         "summary": "Get water by id",
-        "operationId": "getWaterById",
+        "operationId": "getSpentById",
         "description": "Get water by id",
         "security": [
           {
@@ -268,11 +246,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -297,11 +271,9 @@
         }
       },
       "patch": {
-        "tags": [
-          "Water"
-        ],
+        "tags": ["Water"],
         "summary": "Update water",
-        "operationId": "upsertWater",
+        "operationId": "upsertSpent",
         "description": "Update a used water by ID with payload",
         "security": [
           {
@@ -357,11 +329,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -386,11 +354,9 @@
         }
       },
       "delete": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Delete water",
-        "operationId": "deleteWater",
+        "operationId": "deleteSpent",
         "description": "Delete a water by ID",
         "security": [
           {
@@ -415,10 +381,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message"
-                  ],
+                  "required": ["status", "message"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -450,13 +413,7 @@
     "schemas": {
       "water": {
         "type": "object",
-        "required": [
-          "_id",
-          "name",
-          "phoneNumber",
-          "email",
-          "contactType"
-        ],
+        "required": ["_id", "name", "phoneNumber", "email", "contactType"],
         "properties": {
           "_id": {
             "description": "Contact's id",
@@ -498,11 +455,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
+              "required": ["status", "message", "data"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -514,9 +467,7 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": [
-                    "message"
-                  ],
+                  "required": ["message"],
                   "properties": {
                     "message": {
                       "type": "string",
