# src/routes/index.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import waterRouter from './water-router.js';
+import waterRouter from './spent-router.js';
 import authRouter from './auth-router.js';
 import inRouter from './in-router.js';
 
@@ -8,7 +8,7 @@ const router = Router();
 // router.use('/water-app/water', waterRouter);
 
 router.use('/auth', authRouter);
-router.use('/water', waterRouter);
+router.use('/spent', waterRouter);
 router.use('/in', inRouter);
 
 export default router;
